rendered-caddy-deployment.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      app: proxy-caddy
      env: dev
      name: proxy-caddy
      role: web-server
    name: proxy-caddy
    namespace: 3cd915-dev
  spec:
    ports:
    - name: 2015-tcp
      port: 2015
      protocol: TCP
      targetPort: 2015
    selector:
      app: proxy-caddy
      env: dev
      role: web-server
    sessionAffinity: None
    type: ClusterIP
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: proxy-caddy
      env: dev
      name: proxy-caddy
      role: web-server
    name: proxy-caddy
    namespace: 3cd915-dev
  spec:
    host: proxy-caddy-pims-dev.apps.silver.devops.gov.bc.ca
    port:
      targetPort: 2015-tcp
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: proxy-caddy
      weight: 100
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      app: proxy-caddy
      env: dev
      name: proxy-caddy
      role: web-server
    name: proxy-caddy
    namespace: 3cd915-dev
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: proxy-caddy
        env: dev
        role: web-server
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        labels:
          app: proxy-caddy
          env: dev
          role: web-server
      spec:
        containers:
        - image: image-registry.openshift-image-registry.svc:5000/3cd915-tools/proxy-caddy:dev
          imagePullPolicy: Always
          name: proxy-caddy
          ports:
          - containerPort: 2015
            protocol: TCP
          resources:
            limits:
              cpu: "1"
              memory: 4Gi
            requests:
              cpu: 100m
              memory: 500Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
kind: List
metadata: {}
